[gd_scene load_steps=8 format=3 uid="uid://dcid4y3ew70yn"]

[ext_resource type="Script" uid="uid://bdk81yjcbl3ll" path="res://scripts/GameManager.gd" id="1_psp8s"]
[ext_resource type="Script" uid="uid://bb7ly6trm84on" path="res://scripts/main_camera.gd" id="2_lkdnu"]
[ext_resource type="PackedScene" uid="uid://c7hmuu2lpdj4w" path="res://scenes/ui.tscn" id="2_tol41"]
[ext_resource type="Script" uid="uid://xv6mydho0c2e" path="res://scripts/lootbox_system.gd" id="2_uw7ln"]
[ext_resource type="Script" uid="uid://dqu4vf5by737h" path="res://scripts/map_loader.gd" id="3_c8yh4"]
[ext_resource type="PackedScene" uid="uid://dsgrf4wpfnr0v" path="res://scenes/background_objects.tscn" id="6_j287u"]
[ext_resource type="PackedScene" uid="uid://b20u12x06cxjh" path="res://scenes/player_selector.tscn" id="7_poi6s"]

[node name="GameManager" type="Node"]
script = ExtResource("1_psp8s")

[node name="LootboxManager" type="Node" parent="."]
script = ExtResource("2_uw7ln")

[node name="HealthbarContainer" type="Node" parent="."]

[node name="PlayerContainer" type="Node" parent="."]

[node name="ProjectileContainer" type="Node" parent="."]

[node name="MapLoader" type="Node" parent="."]
script = ExtResource("3_c8yh4")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 640)
script = ExtResource("2_lkdnu")

[node name="UI" parent="Camera2D" instance=ExtResource("2_tol41")]
offset_left = -576.0
offset_top = -324.0
offset_right = -536.0
offset_bottom = -284.0

[node name="Background" type="ColorRect" parent="Camera2D/UI"]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="BackgroundObjects" parent="Camera2D" instance=ExtResource("6_j287u")]

[node name="PlayerSelectors" type="Control" parent="."]
z_index = 4
layout_mode = 3
anchors_preset = 0
offset_left = 300.0
offset_right = 1620.0
offset_bottom = 1280.0
mouse_filter = 2

[node name="Player1" parent="PlayerSelectors" instance=ExtResource("7_poi6s")]
visible = false
layout_mode = 1
offset_right = 116.0
offset_bottom = 234.0

[node name="Player2" parent="PlayerSelectors" instance=ExtResource("7_poi6s")]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_right = 0.0
offset_bottom = 234.0
grow_horizontal = 0
pivot_offset = Vector2(116, 0)

[node name="Player3" parent="PlayerSelectors" instance=ExtResource("7_poi6s")]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -234.0
offset_right = 116.0
offset_bottom = 0.0
grow_vertical = 0

[node name="Player4" parent="PlayerSelectors" instance=ExtResource("7_poi6s")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -234.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(116, 0)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.560955, 0.560955, 0.560955, 1)
